# stormplace

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
proto/: stormplace.proto
splace-backend/: Cargo.toml  build.rs
splace-backend/src/: main.rs  stormplace.rs
splace-frontend/: package-lock.json  package.json
splace-frontend/src-tauri/: Cargo.toml  tauri.conf.json
splace-frontend/src-tauri/src/: main.rs  stormplace.rs
splace-frontend/src/routes/: +page.svelte  Header.svelte  Pixel.svelte  styles.css
splace-frontend/src/routes/splace/: +page.svelte  Pixel.svelte
src/: canvas.rs  main.rs  stormplace.rs
